--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# R-related
+.Rhistory
+.Rprofil
+*.Rproj
+renv/
+
 # Vscode
 .vscode
 
@@ -133,3 +139,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.Rproj.user
